minor style changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             color: rgb(114, 48, 21); 
         }
     </style>
+    <script src="index.js"></script>
 </head>
 
 <body>
@@ -48,8 +49,8 @@
                     <li> Carrots </li>
                     <li> Onions </li>
                     <li> Garlic </li>
-                    <li> Squashes </li>
-                    <li> Zucchini </li>
+                    <li> Butternut squash </li>
+                    <li> Sweet potatoes </li>
                     <li> Maple syrup </li>
                     <li> Balsamic vinegar </li>
                 </ol>
