neater hide/unhide functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </h1>
     <section class="thanksgivinglist">
         <div class="turkey">
-            <h2 onclick="toggleTurkeyList()"> Turkey </h2>
+            <h2 onclick="toggleList('turkeylist')"> Turkey </h2>
             <div id="turkeylist" class="list">
                 <h3> Ingredients </h3>
                 <ol class="ingredients">
@@ -43,7 +43,7 @@
                 src="https://www.bhg.com/thmb/TqkYWo7cnJs_GATeR3MBVzMxl6E=/1244x0/filters:no_upscale():strip_icc()/glazed-roast-turkey-RU337720-579ec8cb279845a8adcc223cc176cdc7.jpg">
         </div>
         <div class="veggies">
-            <h2 onclick="toggleVeggieList()"> Vegetables </h2>
+            <h2 onclick="toggleList('veggielist')"> Vegetables </h2>
             <div id="veggielist" class="list">
                 <h3> Ingredients </h3>
                 <ol class="ingredients">
@@ -65,7 +65,7 @@
 
         </div>
         <div class="pie">
-            <h2 onclick="togglePieList()"> Pecan Pie </h2>
+            <h2 onclick="toggleList('pielist')"> Pecan Pie </h2>
             <div id="pielist" class="list">
                 <h3> Ingredients </h3>
                 <ol class="ingredients">
